fixed spacing between emoji and users name

--- a/public/styles/tweetBody.css
+++ b/public/styles/tweetBody.css
@@ -7,6 +7,10 @@
   text-align: center;
 }
 
+.users-name {
+  margin-left: 10px;
+}
+
 .new-tweet {
   display: flex;
   flex-direction: column;
@@ -21,6 +25,7 @@ p {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   margin: 10px 10px 10px 10px;
 }
 
@@ -29,7 +34,7 @@ p {
   margin: 10px 0px 10px 0px;
 }
 
-.face-name {
+#face-name {
   display: flex;
   flex-direction: row;
   align-items: center;
